[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.29.0", default-features = false, features = ["std", "rand"] }
rand = { version = "0.8.4", default-features = false, features = ["std"] }

[profile.release]
codegen-units = 1
lto = "fat"
debug = 2
