[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.29.0", default-features = false, features = ["std", "rand"] }
rand = { version = "0.8.4", default-features = false, features = ["std"] }
rayon = "1.5.1"
indicatif = { version = "0.16.2", features = ["rayon"] }

[profile.release]
codegen-units = 1
lto = "fat"
debug = 2
